--- a/01.SpringBoot/SpringBoot集成组件库/springboot-3-quartz-detailed-demo/pom.xml
+++ b/01.SpringBoot/SpringBoot集成组件库/springboot-3-quartz-detailed-demo/pom.xml
@@ -17,9 +17,44 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		<!-- quartz -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-quartz</artifactId>
+		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.quartz-scheduler</groupId>-->
+<!--			<artifactId>quartz</artifactId>-->
+<!--			<version>2.2.3</version>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.quartz-scheduler</groupId>-->
+<!--			<artifactId>quartz-jobs</artifactId>-->
+<!--			<version>2.2.3</version>-->
+<!--		</dependency>-->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+		</dependency>
+		<!-- Spring Boot web启动器 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<!-- Mysql -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.33</version>
+		</dependency>
+		<!-- MongoDB -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
 
 		<dependency>
