添加SpringBoot3集成Quartz详细版项目，内容还未填充

--- a/01.SpringBoot/SpringBoot集成组件库/springboot-3-quartz-detailed-demo/src/main/resources/quartz.properties
+++ b/01.SpringBoot/SpringBoot集成组件库/springboot-3-quartz-detailed-demo/src/main/resources/quartz.properties
@@ -17,3 +17,4 @@ org.quartz.dataSource.myDS.URL=jdbc:mysql://127.0.0.1:3306/springboot-3-quartz-d
 org.quartz.dataSource.myDS.user=root
 org.quartz.dataSource.myDS.password=guoshunfa
 org.quartz.dataSource.myDS.maxConnections=5
+org.quartz.dataSource.myDS.connectionProvider.class=com.guoshunfa.springboot3quartzdetaileddemo.config.DruidConnectionProvider
