--- a/01.SpringBoot/SpringBoot集成组件库/springboot-3-quartz-detailed-demo/pom.xml
+++ b/01.SpringBoot/SpringBoot集成组件库/springboot-3-quartz-detailed-demo/pom.xml
@@ -22,16 +22,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-quartz</artifactId>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>org.quartz-scheduler</groupId>-->
-<!--			<artifactId>quartz</artifactId>-->
-<!--			<version>2.2.3</version>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.quartz-scheduler</groupId>-->
-<!--			<artifactId>quartz-jobs</artifactId>-->
-<!--			<version>2.2.3</version>-->
-<!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
@@ -56,12 +46,27 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
-
+		<!--druid 数据连接池-->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>1.1.17</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.alibaba</groupId>-->
+<!--			<artifactId>druid</artifactId>-->
+<!--			<version>1.2.16</version>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
